add \pic access

--- a/tikz_cheatsheet.tex
+++ b/tikz_cheatsheet.tex
@@ -71,6 +71,7 @@
         \tikzcmd{node seperation=\tikzparam{dist}}
 
         \section{Pics}
+        \tikzcmd{\textbackslash pic[\tikzparam{keys}] (\tikzparam{label}) \{\tikzparam{pic\_type}\} }
         \begin{itemize}
             \item defining a pic
             \item arguments
