add more details to pics

--- a/tikz_cheatsheet.tex
+++ b/tikz_cheatsheet.tex
@@ -71,9 +71,12 @@
         \tikzcmd{node seperation=\tikzparam{dist}}
 
         \section{Pics}
+        \tikzcmd{\textbackslash tikzset\{\tikzparam{pic name}/.pic=\{\\
+           \tikzparam{pic definition}\\
+        \}\}}\\
         \tikzcmd{\textbackslash pic[\tikzparam{keys}] (\tikzparam{label}) \{\tikzparam{pic\_type}\} }
         \begin{itemize}
-            \item defining a pic
+
             \item arguments
             \item accessing hierarchy
         \end{itemize}
