re-arrange dashed/dotted and add thick/thin

--- a/tikz_cheatsheet.tex
+++ b/tikz_cheatsheet.tex
@@ -1,5 +1,5 @@
 \documentclass[10pt]{article}
-\title{TikZ Cheatsheet}
+\title{The Ultimate TikZ Cheatsheet}
 \author{Christian Amstutz}
 \date{\today}
 
@@ -40,9 +40,8 @@
         keys:\\
         \tikzcmd{draw} draw the path by line\\
         \tikzcmd{draw=none} do not draw line\\
-        \tikzcmd{solid} draw solid line\\
-        \tikzcmd{dashed} draw dashed line\\
-        \tikzcmd{dotted} draw dotted line\\
+        \tikzcmd{solid}/\tikzcmd{dashed}/\tikzcmd{dotted} line dashing\\
+        \tikzcmd{ultra thin}/\tikzcmd{normal}/\tikzcmd{ultra tick} line width\\
         \tikzcmd{fill=\tikzparam{color}} fills the object with \tikzparam{color}\\
         \tikzcmd{color=\tikzparam{color}} sets the line color\\
         objects:\\
